--- a/frontend/app/views/main.html
+++ b/frontend/app/views/main.html
@@ -1,23 +1,15 @@
 <div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#/">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
-</div>
-
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
-
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
-
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
+  <h2>欢迎使用宿舍查询工具</h2>
+  <p>请输入姓名及学号</p>
+  <form>
+    <div class="form-group">
+      <label for="name">姓名</label>
+      <input id="name" ng-model="name" class="form-control">
+    </div>
+    <div class="form-group">
+      <label for="number">学号</label>
+      <input id="number" ng-model="number" class="form-control">
+    </div>
+  </form>
+  <p><button class="btn btn-lg btn-success" ng-click="search($event)">查询!<span class="glyphicon glyphicon-ok"></span></button></p>
 </div>
