--- a/frontend/app/views/main.html
+++ b/frontend/app/views/main.html
@@ -11,5 +11,6 @@
       <input id="number" ng-model="number" class="form-control">
     </div>
   </form>
+  <p class="fail-message" style="color: red;display: none">查询结果为空,请核对姓名学号</p>
   <p><button class="btn btn-lg btn-success" ng-click="search($event)">查询!<span class="glyphicon glyphicon-ok"></span></button></p>
 </div>
