--- a/frontend/app/views/result.html
+++ b/frontend/app/views/result.html
@@ -1,3 +1,5 @@
 <div class="jumbotron">
-  {{resultMessage.name}}
+  <h2>查询结果</h2>
+  <p>欢迎{{resultMessage.name}}同学来中国石油大学(华东)就读,你的宿舍是{{resultMessage.dormnumber}}</p>
+  <a ng-href="#/" class="btn btn-lg btn-primary">返回主页</a>
 </div>
