前端主页稍改动

--- a/frontend/app/views/main.html
+++ b/frontend/app/views/main.html
@@ -1,14 +1,14 @@
-<div class="jumbotron">
+<div class="jumbotron form">
   <h2>欢迎使用宿舍查询工具</h2>
   <p>请输入姓名及学号</p>
   <form>
     <div class="form-group">
       <label for="name">姓名</label>
-      <input id="name" ng-model="name" class="form-control">
+      <input id="name" ng-model="name" class="form-control test" >
     </div>
     <div class="form-group">
       <label for="number">学号</label>
-      <input id="number" ng-model="number" class="form-control">
+      <input id="number" ng-model="number" class="form-control" >
     </div>
   </form>
   <p class="fail-message" style="color: red;display: none">查询结果为空,请核对姓名学号</p>
