--- a/frontend/app/styles/main.css
+++ b/frontend/app/styles/main.css
@@ -45,6 +45,7 @@ body {
 .jumbotron {
   text-align: center;
   border-bottom: 1px solid #e5e5e5;
+  background: none;
 }
 .jumbotron .btn {
   font-size: 21px;
@@ -81,3 +82,31 @@ body {
     border-bottom: 0;
   }
 }
+.bg{
+  background-image: url("../images/bg.jpg");
+}
+.form {
+  background: #2b2b36;
+  position: relative;
+  width: 60%;
+  margin: 3% auto 0 auto;
+  text-align: center;
+  border-radius: 15px;
+  -webkit-border-radius: 15px;
+  -moz-border-radius: 15px;
+  -o-border-radius: 15px;
+  color: darkgray;
+}
+.test{
+  width: 100%;
+  padding: 1em 2em 1em 3em;
+  color: #9199aa;
+  font-size: 18px;
+  outline: none;
+  background: url(../images/adm.png) no-repeat 10px 15px;
+  border: none;
+  font-weight: 100;
+  border-bottom: 1px solid#484856;
+  margin-top: 2em;
+}
+
