--- a/frontend/app/styles/main.css
+++ b/frontend/app/styles/main.css
@@ -85,10 +85,10 @@ body {
 .bg{
   background-image: url("../images/bg.jpg");
 }
-.form {
+.for {
   background: #2b2b36;
   position: relative;
-  width: 60%;
+  width: 80%;
   margin: 3% auto 0 auto;
   text-align: center;
   border-radius: 15px;
