--- a/frontend/app/views/about.html
+++ b/frontend/app/views/about.html
@@ -2,20 +2,18 @@
   <div class="row">
     <div class="col-xs-12 col-xs-6 col-xs-8">
       <p class="lead" style="color: cadetblue">易班（Yiban）是一个融合新闻、论坛、博客、微博、社交等功能的综合性实
-        名制网络平台，其目标用户群体为中国大陆高校的师生。易班得到了中华人民
-        共和国教育部和国家互联网信息办公室的支持，建立了教育部易班发展中心。
-        易班的推广和建设也成为了高校的重点工作之一。</p>
+        名制网络平台，其目标用户群体为中国大陆高校的师生。</p>
     </div>
     <div class="col-xs-6 col-xs-4">
-      <img src="images/yi.png" alt="" width="40%">
+      <img src="images/yi.png" alt="" width="80px">
     </div>
   </div>
   <div class="row">
     <div class="col-xs-6 col-xs-4">
-      <img src="images/ban.png" alt="" width="40%" style="right: auto">
+      <img src="images/ban.png" alt="" width="80px" >
     </div>
     <div class="col-xs-12 col-xs-6 col-xs-8">
-      <p class="lead" style="color: aquamarine">“石大易班”是中国石油大学（华东）依托教育部“易班网”建设而成的学生综合互动社区。易班网是高校教育教学，生活服务，文化娱乐的综合性互动社区，为在校师生提供主页定制，在线学习，活动发布，兴趣交友等教育信息化一站式服务功能。</p>
+      <p class="lead" style="color: aquamarine">“石大易班”是依托教育部“易班网”建设而成的学生综合互动社区。为在校师生提供主页定制，在线学习，活动发布，兴趣交友等教育信息化一站式服务功能。</p>
     </div>
   </div>
 </div>
