--- a/frontend/app/views/contact.html
+++ b/frontend/app/views/contact.html
@@ -1,1 +1,19 @@
-<p>This is the contact view.</p>
+<div class="row">
+  <div class="col-md-4">
+    <span class="glyphicon glyphicon-map-marker lead" aria-hidden="true">&nbsp;地址</span><!--地址-->
+    <p class="lead">
+      中国石油大学(华东)网球场对过
+    </p>
+  </div>
+  <div class="col-md-4">
+    <span class="glyphicon glyphicon-envelope lead" aria-hidden="true">&nbsp;邮箱</span><!--邮箱-->
+    <p class="lead">newsyiban@163.com</p>
+  </div>
+  <div class="col-md-4">
+    <span class="glyphicon glyphicon-phone lead" aria-hidden="true">&nbsp;电话</span><!--电话-->
+    <p class="lead">86983248</p>
+  </div>
+</div>
+
+
+
