--- a/frontend/app/views/about.html
+++ b/frontend/app/views/about.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-xs-6 col-xs-8">
-      <p class="lead" style="color: cadetblue">易班（Yiban）是一个融合新闻、论坛、博客、微博、社交等功能的综合性实
+      <p class="lead" style="color: black">易班（Yiban）是一个融合新闻、论坛、博客、微博、社交等功能的综合性实
         名制网络平台，其目标用户群体为中国大陆高校的师生。</p>
     </div>
     <div class="col-xs-6 col-xs-4">
@@ -13,7 +13,7 @@
       <img src="images/ban.png" alt="" width="80px" >
     </div>
     <div class="col-xs-12 col-xs-6 col-xs-8">
-      <p class="lead" style="color: aquamarine">“石大易班”是依托教育部“易班网”建设而成的学生综合互动社区。为在校师生提供主页定制，在线学习，活动发布，兴趣交友等教育信息化一站式服务功能。</p>
+      <p class="lead" style="color: black">“石大易班”是依托教育部“易班网”建设而成的学生综合互动社区。为在校师生提供主页定制，在线学习，活动发布，兴趣交友等教育信息化一站式服务功能。</p>
     </div>
   </div>
 </div>
