--- a/frontend/app/views/contact.html
+++ b/frontend/app/views/contact.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" style="color: black">
   <div class="col-md-4">
     <span class="glyphicon glyphicon-map-marker lead" aria-hidden="true">&nbsp;地址</span><!--地址-->
     <p class="lead">
