--- a/frontend/app/views/main.html
+++ b/frontend/app/views/main.html
@@ -1,5 +1,6 @@
-<div class="jumbotron for">
+<div class="jumbotron for container">
   <img src="images/touxiang.png" alt="" style="margin: 2em 0 0;">
+  <br><br><br>
   <form>
     <div  class="form-group">
       <input  type="text" id="name"  class="test"  value="姓名" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = '姓名';}">
@@ -9,6 +10,7 @@
       <input  type="text" id="number" value="学号" class="test"  onfocus="this.value = '';" onblur="if (this.value == '') {this.value = '学号';}">
     </div>
   </form>
+  <br><br><br>
   <p class="fail-message" style="color: red;display: none">查询结果为空,请核对姓名学号</p>
   <p><button class="btn btn-lg btn-success" ng-click="search($event)">查询!<span class="glyphicon glyphicon-ok"></span></button></p>
 </div>
